cluster/apps/default/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name transmission
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
    - name: &port http
      protocol: TCP
      port: 9091
      targetPort: *port
    - name: &tport tcp
      protocol: TCP
      port: 51413
      targetPort: *tport
    - name: &uport udp
      protocol: UDP
      port: 51413
      targetPort: *uport
  type: ClusterIP
